# ChangeLog for www-client/epiphany
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany/ChangeLog,v 1.235 2010/04/12 18:48:34 leio Exp $

  12 Apr 2010; Mart Raudsepp <leio@gentoo.org> epiphany-2.28.2.ebuild:
  Fix libsoup dependencies - no need to dep on libsoup[gnome], configure
  checks only libsoup-gnome and we dep on the split package already. Makes
  things more user friendly for users with no global USE=gnome

  05 Apr 2010; Raúl Porcel <armin76@gentoo.org> epiphany-2.26.3-r3.ebuild:
  alpha/ia64/sparc stable wrt #308549

  20 Mar 2010; Pacho Ramos <pacho@gentoo.org> epiphany-2.26.3-r4.ebuild:
  Bump RDEPEND to xulrunner-1.9.2 since it no longer builds against 1.9.1

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  epiphany-2.26.3-r3.ebuild:
  stable x86, bug 308549

  15 Mar 2010; nixnut <nixnut@gentoo.org> epiphany-2.26.3-r3.ebuild:
  ppc stable #308549

  12 Mar 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking epiphany-2.26.3-r3 ppc64 stable for bug 308549

*epiphany-2.26.3-r4 (12 Mar 2010)

  12 Mar 2010; Pacho Ramos <pacho@gentoo.org> +epiphany-2.26.3-r4.ebuild,
  +files/epiphany-2.26.3-glib.patch, +files/epiphany-2.26.3-nspr.patch,
  +files/epiphany-2.26.3-xul192.patch:
  Support xulrunner-1.9.2, thanks a lot to Hicham HAOUARI for his help and
  patches.

  11 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org>
  epiphany-2.24.3.ebuild, -epiphany-2.24.3-r10.ebuild,
  -epiphany-2.26.3.ebuild, -epiphany-2.28.1.ebuild, epiphany-2.28.2.ebuild:
  Clean up old revisions. Make sure libsoup-gnome is in RDEPEND, bug
  #305423.

  07 Mar 2010; Pacho Ramos <pacho@gentoo.org> epiphany-2.26.3-r3.ebuild:
  amd64 stable, bug 308089

  18 Jan 2010; Jeroen Roovers <jer@gentoo.org> epiphany-2.26.3-r2.ebuild:
  Stable for HPPA (bug #282177).

*epiphany-2.26.3-r3 (11 Jan 2010)

  11 Jan 2010; Pacho Ramos <pacho@gentoo.org> +epiphany-2.26.3-r3.ebuild,