@@ -1,6 +1,10 @@
 # ChangeLog for www-client/epiphany
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany/ChangeLog,v 1.235 2010/04/12 18:48:34 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany/ChangeLog,v 1.236 2010/04/14 18:36:08 pacho Exp $
+
+  14 Apr 2010; Pacho Ramos <pacho@gentoo.org> epiphany-2.26.3-r4.ebuild:
+  Add a message suggesting people to remove old compreg.dat file to make
+  epiphany work again after updating.
 
   12 Apr 2010; Mart Raudsepp <leio@gentoo.org> epiphany-2.28.2.ebuild:
   Fix libsoup dependencies - no need to dep on libsoup[gnome], configure
